@@ -1,3 +1,10 @@
+2007-04-23 (r14)
+
+* Added nice mocks, i.e. mocks that don't raise on unknown methods (Mark Thomas)
+
+* Fixed bug that prevented expectations after invocations (M. Scott Ford)
+
+
 2006-06-11 (r12)
 
 * Added possibility to throw an exception, based on code by Justin DeWind
